lots of changes.

--- a/app/views/layouts/standard-layout.haml
+++ b/app/views/layouts/standard-layout.haml
@@ -4,6 +4,10 @@
   %head
     %title Lunar Sway Landing Site
     = stylesheet_link_tag "main"
+    = javascript_include_tag "application"
+    = javascript_include_tag "jquery/jquery-1.2.6.min.js"
+    = javascript_include_tag "jquery/jquery.form.js"
+    = javascript_include_tag "swfobject.js"
   
   %body
     #main_page
