--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -3,6 +3,8 @@
 @import url(type.css);
 @import url(home.css);
 @import url(news_item.css);
+@import url(links.css);
+@import url(tour_dates.css);
 body {
   background-color: #1a1a1a;
   color: #cccccc;
