--- a/public/stylesheets/sass/main.sass
+++ b/public/stylesheets/sass/main.sass
@@ -3,6 +3,8 @@
 @import type.css
 @import home.css
 @import news_item.css
+@import links.css
+@import tour_dates.css
 
 body
   :background-color #1a1a1a
