--- a/app/views/home/index.haml
+++ b/app/views/home/index.haml
@@ -1,4 +1,10 @@
-%h1 Lunar Sway
+.mailing_list_join
+  - form_tag mailing_list_items_path, :id => 'mailing_list_form' do
+    email:
+    = text_field_tag "mailing_list_item[email]", "", :id => 'mailing_list_join'
+    = submit_tag "join!"
+  
+%h3 Recent News
 
 .home_news
   - for news_item in @news_items
@@ -20,5 +26,18 @@
             %br/
             = link_to "(edit)", edit_news_item_path(news_item)
             = link_to "(delete)", news_item, :confirm => 'Are you sure?', :method => :delete
+.home_releases
+  %h4 Lunar Releases
+  
+  .lunar_release
+    .title July 18, 2008 - America Spoke Up
+    .embed
+      %embed{:src => "play/america_spoke_up_lo.mp3", :height => "15", :width => "200", :controls => "smallconsole", :autostart => false}
+  .lunar_release
+    .title June 18, 2008 - Saint Mark's Square
+    .embed
+      %embed{:src => "play/st_marks_square_lo.mp3", :height => "15", :width => "200", :controls => "smallconsole", :autostart => false}
 
 .clear
+
+= javascript_tag "setupHome();"
