--- a/public/stylesheets/sass/home.sass
+++ b/public/stylesheets/sass/home.sass
@@ -1,3 +1,26 @@
 .home_news
-  :width 400px
+  :width 550px
   :float left
+
+.home_releases  
+  :float right
+  :width 250px
+  :border-left dotted #bbbbbb 1px
+  :padding 0px 10px 25px 25px
+  .lunar_release
+    :padding 10px
+    :font-size 75%
+    .title
+    .embed
+      :text-align right
+      :padding 10px 0px 5px 10px
+  
+  
+.mailing_list_join
+  :font-size 75%
+  input
+    :font-size 80%
+    :border solid gray 1px
+    :background-color transparent
+    :padding 5px
+    :color #b1b1b1
