think i got it this time

--- a/app/views/home/index.haml
+++ b/app/views/home/index.haml
@@ -32,11 +32,11 @@
   .lunar_release
     .title July 18, 2008 - America Spoke Up
     .embed
-      %embed{:src => "play/america_spoke_up_lo.mp3", :height => "15", :width => "200", :controls => "smallconsole", :autostart => false}
+      %embed{:src => "play/america_spoke_up_lo.mp3", :height => "15", :width => "200", :controls => "smallconsole", :autostart => "false"}
   .lunar_release
     .title June 18, 2008 - Saint Mark's Square
     .embed
-      %embed{:src => "play/st_marks_square_lo.mp3", :height => "15", :width => "200", :controls => "smallconsole", :autostart => false}  
+      %embed{:src => "play/st_marks_square_lo.mp3", :height => "15", :width => "200", :controls => "smallconsole", :autostart => "false"}  
 
 .clear
 
