--- a/public/stylesheets/sass/structure.sass
+++ b/public/stylesheets/sass/structure.sass
@@ -59,6 +59,8 @@
       :height 460px
       :padding 0px 5px 0px 55px
       :margin-right 40px
+    .top_info
+      :padding 0px 45px 0px 55px
     #logged_in
       :padding 5px 0px 10px 0px
       :text-align right
