--- a/app/views/home/index.haml
+++ b/app/views/home/index.haml
@@ -1,8 +1,3 @@
-.mailing_list_join
-  - form_tag mailing_list_items_path, :id => 'mailing_list_form' do
-    email:
-    = text_field_tag "mailing_list_item[email]", "", :id => 'mailing_list_join'
-    = submit_tag "join!"
   
 %h3 Recent News
 
@@ -10,7 +5,7 @@
   - for news_item in @news_items
     .news_item
       .title
-        = news_item.created_at.strftime("%M %d, %Y")
+        = news_item.created_at.strftime("%B %d, %Y")
         =h news_item.title
       .posted_by
         by
