--- a/app/views/mailing_list_item_mailer/signup_notification.haml
+++ b/app/views/mailing_list_item_mailer/signup_notification.haml
@@ -1,8 +1,8 @@
 %p
   As token of appreciation to our first fans, here's a link to your free copy of our first two songs: 
-  %a{:href => "http://0.0.0.0:3000/song_downloads/get/Saint Mark's Square"} "Saint Mark's Square"
+  %a{:href => "http://www.lunarsway.com/song_downloads/get/Saint Mark's Square"} "Saint Mark's Square"
   and
-  %a{:href => "http://0.0.0.0:3000/song_downloads/get/America Spoke Up"} “America Spoke Up.”
+  %a{:href => "http://www.lunarsway.com/song_downloads/get/America Spoke Up"} “America Spoke Up.”
 %p We will be releasing a song online every month, on every full moon, and are very excited about the launch of our new website in a few weeks.
 %p We are also planning an invite-only open rehearsal in August – we’ll keep you posted.
 %br/
