--- a/app/views/news_items/edit.haml
+++ b/app/views/news_items/edit.haml
@@ -4,19 +4,24 @@
 
 - form_for(@news_item) do |f|
   %p
+    %b Date
+    %br/
+    = f.datetime_select :created_at
+
+  %p
     %b Title
     %br/
-    = f.text_field :title
+    = f.text_field :title, :class => "text"
 
   %p
     %b Author
     %br/
-    = f.text_field :author
+    = f.text_field :author, :class => "text"
 
   %p
     %b Body
     %br/
-    = f.text_area :body
+    = f.text_area :body, :class => "text", :rows => "5", :cols => "45"
 
   %p
     = f.submit "Update"
