fixed mailing list jscript problem

--- a/app/views/layouts/standard-layout.haml
+++ b/app/views/layouts/standard-layout.haml
@@ -34,3 +34,5 @@
           .clear
         #content_box
           = @content_for_layout
+          
+    = javascript_tag "setupJoinMailingList();"
