--- a/app/views/layouts/standard-layout.haml
+++ b/app/views/layouts/standard-layout.haml
@@ -34,5 +34,15 @@
           .clear
         #content_box
           = @content_for_layout
-          
-    = javascript_tag "setupJoinMailingList();"
+
+  = javascript_tag "setupJoinMailingList();"
+  :plain
+    <script type="text/javascript">
+      var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+      document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+    </script>
+    <script type="text/javascript">
+      var pageTracker = _gat._getTracker("UA-4758466-1");
+      pageTracker._initData();
+      pageTracker._trackPageview();
+    </script>          
