--- a/public/stylesheets/sass/structure.sass
+++ b/public/stylesheets/sass/structure.sass
@@ -60,7 +60,9 @@
       :padding 0px 5px 0px 55px
       :margin-right 40px
     .top_info
-      :padding 0px 45px 0px 55px
+      :margin-left auto
+      :margin-right auto
+      :width 890px
     #logged_in
       :padding 5px 0px 10px 0px
       :text-align right
