fixed some mail problems

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -6,7 +6,7 @@
 @import url(links.css);
 @import url(tour_dates.css);
 body {
-  background-color: #1a1a1a;
+  background-color: #000000;
   color: #cccccc;
   font-size: 16px; }
 
