--- a/public/stylesheets/structure.css
+++ b/public/stylesheets/structure.css
@@ -57,7 +57,9 @@
       padding: 0px 5px 0px 55px;
       margin-right: 40px; }
     #main_page #main_content .top_info {
-      padding: 0px 45px 0px 55px; }
+      margin-left: auto;
+      margin-right: auto;
+      width: 890px; }
     #main_page #main_content #logged_in {
       padding: 5px 0px 10px 0px;
       text-align: right; }
