--- a/public/stylesheets/sass/news_item.sass
+++ b/public/stylesheets/sass/news_item.sass
@@ -10,6 +10,7 @@
     :font-size 75%
   .body
     :padding 10px 0px 0px 15px
+    :font-size 75%
 
 .news_item_show
   :margin 0px 0px 15px 0px
@@ -23,3 +24,4 @@
     :font-size 75%
   .body
     :padding 10px 0px 0px 15px
+    :font-size 50%
