biography, philosophy, etc.

--- a/app/views/home/biography.haml
+++ b/app/views/home/biography.haml
@@ -1,1 +1,25 @@
-%h1 Biography coming soon!
+%h1 Biography
+
+%p Before they even met each other, Drew Lawrence and Barrett Yeretsian decided that they didn't need to be in a band anymore.
+%p Drew, an award-winning pianist, singer, and songwriter, had been in several bands and felt he was ready to pursue a career as a solo artist.
+%p
+  Barrett Yeretsian, a successful producer, songwriter and drummer, had been in a number of popular bands, but chose to devote his time and
+  attention to his flourishing career as a producer.
+%p When Barrett first heard Drew's songs, he knew that they had to work together and began producing Drew's solo album.
+%p
+  There was an undeniable synergy between the two that led them to want something more. By the time the first song "St. Mark's Square" had been recorded,
+  it was clear that something more than a song had been created. A new sound was emerging, and a new band that was eventually to become Lunar Sway.
+%p
+  One thing was for sure, that if Drew and Barrett were to start a band, it had to be different than anything they, or anyone else, had done before.
+  Unique and bold, yet humble and grounded in wisdom. Drawing upon classic influences and structures, yet unafraid of change and stretching like a bridge into the future.
+%p Writing songs together, Drew and Barrett extended this vision into yet more recordings, which drew two more members into the group.
+%p
+  Clint Feddersen, who had been playing bass with Barrett for several years, heard these recordings and was amazed by the quality of the songs and the
+  passion of their delivery. He felt that these songs were going to move people in a deep, profound way, and he wanted to be a part of it.
+%p
+  Preston Pope, who was working with Barrett mixing and engineering, also heard what Barrett and Drew had recorded and joined forces with them as the band's guitarist.
+%p
+  Starting with “St. Mark’s Square,” Lunar Sway is now releasing a song every full moon. Like Earth’s lone satellite, Lunar Sway is becoming a force of nature,
+  designed to stir the tides.
+
+
