--- a/app/views/home/philosophy.haml
+++ b/app/views/home/philosophy.haml
@@ -1,1 +1,20 @@
-%h1 Coming soon!
+%h1 Philosophy
+
+%p
+  %strong LUNAR SWAY
+  is
+  %i energy, urgency and a message.
+
+%p The group is guided by the underlying principle of change and progress: political, environmental, personal and musical.
+%p It starts with the courage to actively observe our culture and the current state of our society and reflect the realities back to create awareness through music.
+%p
+  Being aware of the truths of issues like global warming is the first step necessary for change just as being aware of our deeper, personal
+  truths is the first step in becoming a better human being. It takes a certain fearlessness to stand up and tell your truth and it takes even more
+  courage to take steps toward change.
+%p
+  Embracing new models of creation, promotion and distribution of their music, Lunar Sway draws on traditional and popular styles to create a
+  sound that is uniquely their own. By choice, the group is self-produced, self-managed and controls all aspects of their distribution.
+%p In more ways than one, the moon is tied to Lunar Sway and Lunar Sway is tied to the moon…
+%p The moon never rests. It moves with a concentrated energy, always at work, although sometimes invisible to the naked eye.
+%p Then for one day each month, it glares brilliantly with all of its reflective glory, one moment of clarity disproving the illusion that it was every less than whole.
+%p The moon shifts every day, knowing it has a purpose, determined to leave everything just a little different than the moment before. Every day, a little more progress.
