changed to flash mp3 player

--- a/app/views/home/index.haml
+++ b/app/views/home/index.haml
@@ -27,10 +27,10 @@
   .lunar_release
     .title July 18, 2008 - America Spoke Up
     .embed
-      %embed{:src => "play/america_spoke_up_lo.mp3", :height => "15", :width => "200", :controls => "smallconsole", :autostart => "false"}
+      %embed{:src => "/swf/mediaplayer.swf", :width => "225", :height => "18", :allowscriptaccess => "always", :allowfullscreen => "true", :flashvars => "file=/play/america_spoke_up_lo.mp3&autostart=true"}
   .lunar_release
     .title June 18, 2008 - Saint Mark's Square
     .embed
-      %embed{:src => "play/st_marks_square_lo.mp3", :height => "15", :width => "200", :controls => "smallconsole", :autostart => "false"}  
+      %embed{:src => "/swf/mediaplayer.swf", :width => "225", :height => "18", :allowscriptaccess => "always", :allowfullscreen => "true", :flashvars => "file=/play/st_marks_square_lo.mp3&autostart=false"}
 
 .clear
