--- a/public/stylesheets/structure.css
+++ b/public/stylesheets/structure.css
@@ -49,7 +49,7 @@
       float: left; }
   #main_page #main_content {
     height: 550px;
-    background-image: URL('/images/structure/bg_content.jpg');
+    background-image: URL('/images/structure/bg_content.gif');
     padding-top: 20px; }
     #main_page #main_content #content_box {
       overflow-y: auto;
