--- a/public/stylesheets/sass/structure.sass
+++ b/public/stylesheets/sass/structure.sass
@@ -52,7 +52,7 @@
   
   #main_content
     :height 550px
-    :background-image URL('/images/structure/bg_content.gif')    
+    :background-image URL('/images/structure/bg_content.jpg')    
     :padding-top 20px
     #content_box
       :overflow-y auto
