--- a/public/stylesheets/sass/main.sass
+++ b/public/stylesheets/sass/main.sass
@@ -33,6 +33,10 @@ a
 ul
   :list-style-type disc
 
+a.tiny_link
+  :font-size 9px
+  :text-decoration none
+
 .talignr
   :text-align right
 .talignl
