--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -29,6 +29,10 @@ a {
 ul {
   list-style-type: disc; }
 
+a.tiny_link {
+  font-size: 9px;
+  text-decoration: none; }
+
 .talignr {
   text-align: right; }
 
