--- a/public/stylesheets/sass/structure.sass
+++ b/public/stylesheets/sass/structure.sass
@@ -49,7 +49,14 @@
       :margin-left 12px
       :margin-top 1px
       :float left
-  
+    img#nav_lyrics
+      :margin-left 15px
+      :margin-top 0px
+      :float left
+    img#nav_blog
+      :margin-left 17px 
+      :margin-top 1px
+      :float left
   #main_content
     :height 550px
     :background-image URL('/images/structure/bg_content.jpg')    
