fixed lyrics link

--- a/app/views/lyrics/SaintMarksSquare.haml
+++ b/app/views/lyrics/SaintMarksSquare.haml
@@ -1,3 +1,4 @@
+%div= link_to "&laquo; Back to Lyrics", :controller => "/lyrics", :action => "index"
 %h1.floatl Saint Mark's Square Lyrics
 %h1.floatr
   %embed{:src => "/swf/mediaplayer.swf", :width => "225", :height => "18", :allowscriptaccess => "always", :allowfullscreen => "true", :flashvars => "file=/play/st_marks_square_lo.mp3&autostart=false"}
