--- a/app/views/lyrics/AmericaSpokeUp.haml
+++ b/app/views/lyrics/AmericaSpokeUp.haml
@@ -1,4 +1,4 @@
-%div= link_to "&laquo; Back to Lyrics"
+%div= link_to "&laquo; Back to Lyrics", :controller => "/lyrics", :action => "index"
 %h1.floatl America Spoke Up Lyrics
 %h1.floatr
   %embed{:src => "/swf/mediaplayer.swf", :width => "225", :height => "18", :allowscriptaccess => "always", :allowfullscreen => "true", :flashvars => "file=/play/america_spoke_up_lo.mp3&autostart=false"}
