updated america lyrics, moved and modified mailing list form

--- a/app/views/lyrics/AmericaSpokeUp.haml
+++ b/app/views/lyrics/AmericaSpokeUp.haml
@@ -1,54 +1,35 @@
-%div= link_to "&laquo; Back to Lyrics", :controller => "/lyrics", :action => "index"
+%div= link_to "&laquo; Back to Lyrics", lyrics_url
 %h1.floatl America Spoke Up Lyrics
 %h1.floatr
   %embed{:src => "/swf/mediaplayer.swf", :width => "225", :height => "18", :allowscriptaccess => "always", :allowfullscreen => "true", :flashvars => "file=/play/america_spoke_up_lo.mp3&autostart=false"}
 .clear
 
 %p
-  Lighthouse keeper - where have you been?
+  Lighthouse keeper, where've you been?
   %br/
-  This broken beacon - been shinning dim
+  This broken beacon has been shining dim
   %br/
-  Steeples rise - into a damaged sky
+  Steeples rise into a damaged sky
   %br/
-  with people praying - for a change inside
+  with people praying for a change inside
 
 %p
-  The crowds - the crowds are swarming
+  The crowds are swarming, it's the sound of moving forward
   %br/
-  It's the sound - of moving forward
+  Well the sea is changing, the sailing has been rough
   %br/
-  Well the sea is a changin' - the sailing has been rough
-  %br/
-  I heard that fear was on the run
-
-%p America Spoke Up
+  I heard that fear was on the run, America Spoke Up
 
 %p
-  Well there's been no music at the school in a while
+  There's been no music at the school in a while
   %br/
-  and there's raindrops falling from the cieling tiles
+  There's raindrops falling from the ceiling tiles
   %br/
-  Well a mother moved into her daughter's house
+  A mother moved into her daughter's house
   %br/
-  She had to sell her place when her health went south
+  She had to sell her place because her health went south
 
 %p
-  I don't want my son - sweeping the ashes of our dreams
+  I don't want my son sweeping the ashes of our dreams
   %br/
-  I don't want our daughters - asking why we let this be
-
-%p
-  The crowds - the crowds are swarming
-  %br/
-  It's the sound - of moving forward
-  %br/
-  Well the sea is a changin' - the sailing has been rough
-  %br/
-  I heard that fear was on the run
-  %br/
-  and that your hope had nearly turned to dust
-  %br/
-  let's give them something they can trust
-
-%p America Spoke Up
+  I don't want our daughters asking why we let this be
