--- a/app/views/layouts/standard-layout.haml
+++ b/app/views/layouts/standard-layout.haml
@@ -17,7 +17,13 @@
   %body
     #main_page
       #main_header
-        = link_to image_tag("/images/structure/logo.png"), home_url
+        .floatl= link_to image_tag("/images/structure/logo.png"), home_url
+        .mailing_list_join.floatr
+          .message Join our mailing list!
+          - form_tag mailing_list_items_path, :id => 'mailing_list_form' do
+            = text_field_tag "mailing_list_item[email]", "", :id => 'mailing_list_join'
+            = submit_tag "join!"        
+        .clear
       #main_nav
         = link_to image_tag("/images/structure/nav/news.gif", :id => "nav_news"), news_url
         = link_to image_tag("/images/structure/nav/downloads.gif", :id => "nav_downloads"), downloads_url
@@ -31,14 +37,7 @@
         = link_to image_tag("/images/structure/nav/blog.gif", :id => "nav_blog"), "http://lunarsway.blogspot.com", :target => "_blank"
         .clear
       #main_content
-        .top_info
-          .mailing_list_join.floatl
-            - form_tag mailing_list_items_path, :id => 'mailing_list_form' do
-              email:
-              = text_field_tag "mailing_list_item[email]", "", :id => 'mailing_list_join'
-              = submit_tag "join!"        
-          #logged_in.floatr= render :partial => "/home/logged_in"
-          .clear
+        #logged_in.talignr= render :partial => "/home/logged_in"
         #content_box
           %div{:style => "padding-top: 10px;"}= @content_for_layout
 
