--- a/public/stylesheets/sass/structure.sass
+++ b/public/stylesheets/sass/structure.sass
@@ -13,7 +13,21 @@
       :margin-top 70px
       &:hover
         :opacity .5
-  
+    .mailing_list_join
+      :font-size 75%
+      :padding-top 50px
+      :padding-right 50px 
+      input
+        :font-size 100%
+        :border solid gray 1px
+        :padding 5px
+        :color #333333
+      .message
+        :font-size 125%
+        :color white
+        :text-align right
+        :font-weight bold
+        :margin-bottom 5px
   #main_nav
     :height 38px
     :background-image URL('/images/structure/bg_nav.jpg')    
@@ -58,9 +72,9 @@
       :margin-top 1px
       :float left
   #main_content
-    :height 550px
+    :height 580px
     :background-image URL('/images/structure/bg_content.jpg')    
-    :padding-top 20px
+    :padding-top 10px
     #content_box
       :overflow-y auto
       :height 440px
