--- a/app/views/layouts/standard-layout.haml
+++ b/app/views/layouts/standard-layout.haml
@@ -35,6 +35,7 @@
         = link_to image_tag("/images/structure/nav/tour.gif", :id => "nav_tour"), tour_url
         = link_to image_tag("/images/structure/nav/lyrics.gif", :id => "nav_lyrics"), lyrics_url
         = link_to image_tag("/images/structure/nav/blog.gif", :id => "nav_blog"), "http://lunarsway.blogspot.com", :target => "_blank"
+        = link_to image_tag("/images/structure/nav/store.gif", :id => "nav_store"), store_url
         .clear
       #main_content
         #logged_in.talignr= render :partial => "/home/logged_in"
