--- a/public/stylesheets/sass/structure.sass
+++ b/public/stylesheets/sass/structure.sass
@@ -71,6 +71,10 @@
       :margin-left 17px 
       :margin-top 1px
       :float left
+    img#nav_store
+      :margin-left 17px 
+      :margin-top 1px
+      :float left
   #main_content
     :height 580px
     :background-image URL('/images/structure/bg_content.jpg')    
