--- a/app/views/lyrics/AmericaSpokeUp.haml
+++ b/app/views/lyrics/AmericaSpokeUp.haml
@@ -11,7 +11,7 @@
   %br/
   Steeples rise into a damaged sky
   %br/
-  with people praying for a change inside
+  With people praying for a change inside
 
 %p
   The crowds are swarming, it's the sound of moving forward
