--- a/app/views/lyrics/SaintMarksSquare.haml
+++ b/app/views/lyrics/SaintMarksSquare.haml
@@ -5,7 +5,7 @@
 .clear
 
 %p
-  &ldquo;Blame it on anyone of us
+  Blame it on anyone of us
   %br/
   It was too much for us to front
   %br/
@@ -27,4 +27,4 @@
   %br/
   They just called for volunteers
   %br/
-  We just changed the channel - in our ears&rdquo;
+  We just changed the channel - in our ears
