--- a/app/views/lyrics/index.haml
+++ b/app/views/lyrics/index.haml
@@ -2,4 +2,5 @@
 
 %ul
   %li= link_to "America Spoke Up", :controller => "/lyrics", :action => "AmericaSpokeUp"
+  %li= link_to "Just For A Moment", :controller => "/lyrics", :action => "JustForAMoment"
   %li= link_to "Saint Mark's Square", :controller => "/lyrics", :action => "SaintMarksSquare"
