--- a/app/views/mailing_list_item_mailer/signup_notification_july.haml
+++ b/app/views/mailing_list_item_mailer/signup_notification_july.haml
@@ -3,7 +3,8 @@
   %a{:href => "http://www.lunarsway.com/song_downloads/get/Saint Mark's Square"} "Saint Mark's Square"
   and
   %a{:href => "http://www.lunarsway.com/song_downloads/get/America Spoke Up"} “America Spoke Up.”
-%p We will be releasing a song online every month, on every full moon, and are very excited about the release of our newest song "Just for a Moment"
+%p We will be releasing a song online every month, on every full moon, and are very excited about the launch of our new website in a few weeks.
+%p We are also planning an invite-only open rehearsal in August – we’ll keep you posted.
 %br/
 %p Next month, you can look forward to our third song "Just for a Moment" which will be released on August, 16th.
 %p
