aug 16 launch fixes

--- a/app/views/lyrics/JustForAMoment.haml
+++ b/app/views/lyrics/JustForAMoment.haml
@@ -5,35 +5,35 @@
 .clear
 
 %p
-  Slow these thoughts - that speed through your mind
+  Slow these thoughts that speed through your mind
   %br/
-  Grow your heart - till it leans towards the light
+  Grow your heart til it leans towards the light
   %br/
-  Stand guard  - as these thoughts become things
+  Stand guard as your thoughts become things
   %br/
-  Flee the dark - let the noonday sing - loud and clear
+  Flee the dark let the new day sing loud and clear
 
 %p
-  Just for a moment - I was already there
+  Just for a moment I was already there
   %br/
-  I could feel it and hold it - there was a whole flight of stairs
+  I could feel it and hold it there was a whole flight of stairs
   %br/
   Just for a moment
 
 %p
-  Sunlight creeps - through our verticle blinds
+  Sunlight creeps through our vertical blinds
   %br/
-  I kiss your skin - and give thanks for this life
+  I kiss your skin and give thanks for this life
   %br/
-  In our tiny house - you make me feel like a king
+  In our tiny house you make me feel like a king
   %br/
-  I've retired any doubts - that our dreams will be lived
+  I've retired any doubts that our dreams will be lived
   %br/
   If we feel they're already here
 
 %p
-  Just for a moment - I was already there
+  Just for a moment I was already there
   %br/
-  I could feel it and hold it - there was a whole flight of stairs
+  I could feel it and hold it there was a whole flight of stairs
   %br/
   Just for a moment
