--- a/app/views/home/philosophy.haml
+++ b/app/views/home/philosophy.haml
@@ -16,5 +16,5 @@
   sound that is uniquely their own. By choice, the group is self-produced, self-managed and controls all aspects of their distribution.
 %p In more ways than one, the moon is tied to Lunar Sway and Lunar Sway is tied to the moon…
 %p The moon never rests. It moves with a concentrated energy, always at work, although sometimes invisible to the naked eye.
-%p Then for one day each month, it glares brilliantly with all of its reflective glory, one moment of clarity disproving the illusion that it was every less than whole.
+%p Then for one day each month, it glares brilliantly with all of its reflective glory, one moment of clarity disproving the illusion that it was ever less than whole.
 %p The moon shifts every day, knowing it has a purpose, determined to leave everything just a little different than the moment before. Every day, a little more progress.
