--- a/public/stylesheets/sass/news_item.sass
+++ b/public/stylesheets/sass/news_item.sass
@@ -1,7 +1,10 @@
 .news_item
   :margin 15px 0px 15px 0px
   :padding-bottom 10px
-  :border-bottom dotted gray 1px 
+  :border-bottom dotted gray 1px
+  .date
+    :font-size 100%
+    :color #bbbbbb
   .title
     :font-size 150%
     .date
