--- a/public/stylesheets/home.css
+++ b/public/stylesheets/home.css
@@ -12,6 +12,10 @@
     .home_releases .releases_content .lunar_release {
       padding: 10px;
       font-size: 75%; }
+      .home_releases .releases_content .lunar_release .title .date {
+        color: #111111; }
+      .home_releases .releases_content .lunar_release .title .song {
+        color: black; }
       .home_releases .releases_content .lunar_release .embed {
         text-align: right;
         padding: 10px 0px 5px 10px; }
