--- a/public/stylesheets/sass/home.sass
+++ b/public/stylesheets/sass/home.sass
@@ -21,6 +21,10 @@
       :padding 10px
       :font-size 75%
       .title
+        .date
+          :color #111111
+        .song
+          :color black
       .embed
         :text-align right
         :padding 10px 0px 5px 10px
