--- a/app/views/home/biography.haml
+++ b/app/views/home/biography.haml
@@ -17,7 +17,7 @@
   Clint Feddersen, who had been playing bass with Barrett for several years, heard these recordings and was amazed by the quality of the songs and the
   passion of their delivery. He felt that these songs were going to move people in a deep, profound way, and he wanted to be a part of it.
 %p
-  Preston Pope, who was working with Barrett mixing and engineering, also heard what Barrett and Drew had recorded and joined forces with them as the band's guitarist.
+  Preston Pope, who was working with Def Leppard while also mixing and engineering with Barrett, also heard what Barrett and Drew had recorded and joined forces with them as the band's guitarist.
 %p
   Starting with “St. Mark’s Square,” Lunar Sway is now releasing a song every full moon. Like Earth’s lone satellite, Lunar Sway is becoming a force of nature,
   designed to stir the tides.
