updated mailing list join email

--- a/app/views/mailing_list_item_mailer/signup_notification.haml
+++ b/app/views/mailing_list_item_mailer/signup_notification.haml
@@ -3,14 +3,19 @@
   %a{:href => "http://www.lunarsway.com/song_downloads/get/Saint Mark's Square"} "Saint Mark's Square"
   and
   %a{:href => "http://www.lunarsway.com/song_downloads/get/America Spoke Up"} “America Spoke Up.”
-%p We will be releasing a song online every month, on every full moon, and are very excited about the release of our newest song "Just for a Moment"
+%p We will be releasing a song online every month, on every full moon, and are very excited about the release of our newest song "Dashboard Lights"
 %br/
-%p Next month, you can look forward to our third song "Just for a Moment" which will be released on August, 16th.
+%p
+  Don't miss our next show at the Troubadour in Hollywood, CA on September 27th!
+  For more information visit the
+  %a{:href => "http://www.lunarsway.com/tour"} tour
+  section of lunarsway.com.
 %p
   Be sure to visit our blog often at
   = succeed "." do
     %a{:href => "http://lunarsway.blogspot.com"} http://lunarsway.blogspot.com
-  We will definitely keep you in the loop on all things Lunar Sway!
+
+%p We will definitely keep you in the loop on all things Lunar Sway!
 
 %p Thanks again for joining,
 %br/
