changed link style

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -21,11 +21,12 @@ textarea {
 
 a {
   font-size: 14px;
-  text-decoration: none;
+  text-decoration: underline;
   color: #eeeeee; }
   a:hover {
     color: #555555;
-    opacity: .5; }
+    opacity: .5;
+    text-decoration: none; }
 
 ul {
   list-style-type: disc; }
