--- a/public/stylesheets/sass/main.sass
+++ b/public/stylesheets/sass/main.sass
@@ -22,13 +22,14 @@ textarea
 
 a
   :font-size 14px
-  :text-decoration none
+  :text-decoration underline
   :color #eeeeee
   &:link
   &:visited
   &:hover
     :color #555555
     :opacity .5
+    :text-decoration none
   &:active
 
 ul
